# test_takao_mincho

./: .gitignore  Makefile.am  Makefile.in  README.md  config.h.in  configure.ac  test_takao_mincho.c
